# autotools.template

./: .gitignore  Makefile.am  Makefile.coverage.am  README  TODO  configure.ac  project_init
include/: Makefile.am
include/my_program/: Makefile.am  common.h  my_program.h  util.h
include/program/: Makefile.am  common.h  program.h  util.h
m4/: ax_coverage.m4  ax_pthread.m4
src/: Makefile.am  common.c  main.c  my_program.c  program.c  util.c
tests/: Makefile.am  example_test.c  my_program_test.c  program_test.c  test.c  util_test.c
